# cabal-fmt

./: .gitmodules  .travis.yml  CONTRIBUTING.md  Cabal  Changelog.md  Makefile  README.md  cabal-fmt.cabal  cabal.haskell-ci  cabal.project  hie.yaml
.github/workflows/: haskell-ci.yml  release.yml  simple.yml
cli/: Main.hs
fixtures/: Cabal-notab.cabal  Cabal-notab.format  Cabal.format  cabal-fmt.cabal  cabal-fmt.format  deep-subsumption.cabal  deep-subsumption.format  fragment-empty.cabal  fragment-empty.format  fragment-missing.cabal  fragment-missing.format  fragment-multiple.cabal  fragment-multiple.format  fragment-section.cabal  fragment-section.format  fragment-wrong-field.cabal  fragment-wrong-field.format  fragment-wrong-type.cabal  fragment-wrong-type.format  ghc-options-flow.cabal  ghc-options-flow.format  ghc-options-vert.cabal  ghc-options-vert.format  issue29.cabal  issue29.format  issue69.cabal  issue69.format  simple-example.cabal  simple-example.format  sublib.cabal  sublib.format  tree-diff.cabal  tree-diff.format  with-sublibs.cabal  with-sublibs.format
foo/: foo.cabal
src/: CabalFmt.hs
src-internal/: CabalFmt.hs
src-internal/CabalFmt/: Error.hs  Fields.hs  Monad.hs  Parser.hs  Prelude.hs  Refactoring.hs
src-internal/CabalFmt/Fields/: BuildDepends.hs  Extensions.hs  Modules.hs
src-internal/CabalFmt/Refactoring/: Fragments.hs  GlobFiles.hs
src-interval/: VersionInterval.hs
src/CabalFmt/: Comments.hs  Error.hs  Fields.hs  FreeText.hs  Glob.hs  Main.hs  Monad.hs  Options.hs  Parser.hs  Pragma.hs  Prelude.hs  PrettyField.hs  Refactoring.hs
src/CabalFmt/Fields/: BuildDepends.hs  Extensions.hs  GhcOptions.hs  Modules.hs  SourceFiles.hs  TestedWith.hs
src/CabalFmt/Refactoring/: ExpandExposedModules.hs  Fragments.hs  GlobFiles.hs  Type.hs
tests/: Golden.hs  golden.hs
tests-interval/: version-interval-tests.hs
