cabal-version:      1.12
name:               issue69
version:            0

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      base        >=4.3   && <4.18
    , bifunctors  >=5.5.5 && <5.6
    , tagged      >=0.8.6 && <0.9
    , inline-r    >1.0.0.0

  exposed-modules:
    Data.Bifunctor.Assoc
    Data.Bifunctor.Swap

  other-extensions: TypeFamilies
