name:                simple-example
version:             1
synopsis:            Simple example of cabal-doctest demonstrating a library
                     with doctests
description:         A package skeleton, to demostrate the use of cabal-doctest
homepage:            https://github.com/phadej/cabal-doctest
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Oleg Grenrus
category:            Example
build-type:          Custom
cabal-version:       1.12

tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.3

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.6 && <1.1

library
  exposed-modules:     Example
  default-extensions:  ScopedTypeVariables RankNTypes
  build-depends:       base >=4.3 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

  if impl(ghcjs)
    cpp-options: -DFOOBAR

  if impl(ghc)
    -- cabal-fmt: glob-files cbits/**/*.c
    c-sources:

  -- empty interval
  if impl(hugs)
    build-depends: unbuildable <0
    build-depends: unbuildable <0, unbuildable2 <0

  -- full interval
  build-depends: text <1 || >=1
  build-depends: containers <1 || >=1, pretty <1 || >=1

  -- only upper bound
  build-depends: foo <1
  build-depends: foo <2
  build-depends: abc <1, def <1, ghj <2

  -- build-tool-depends are formatted like build-depends
  build-tool-depends: happy:happy

  build-tool-depends: happy:happy >=1, alex:alex >=1

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs

  -- cabal-fmt: fragment build-depends.fragment
  build-depends:

  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
